--- a/.github/workflows/parse.yml
+++ b/.github/workflows/parse.yml
@@ -1,9 +1,9 @@
 
-name: Parse Reports
+name: run updater
 on:
   push:
   schedule:
-    - cron: '30 */12 * * *'
+    - cron: '0 8 * * *' # See https://crontab.guru/#0_8_*_*_*
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Python 3.x
         uses: actions/setup-python@v1
         with:
-          python-version: '3.6' 
+          python-version: '3.8' 
       - name: Install requirements
         run: pip install -r requirements.txt 
       - name: Download data and plot updated charts
