--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ matplotlib==3.2.1
 numpy==1.18.4
 pandas==1.0.3
 plotly==4.6.0
+psutil==5.7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
